--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -2,36 +2,58 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#00B8E6"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="edu.upenn.med.researchaide.MainActivity" 
-    android:background="#E0F5FF">
+    tools:context="edu.upenn.med.researchaide.MainActivity" >
 
     <LinearLayout
-        android:orientation="vertical"
+        android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:orientation="vertical"
+        android:background="@drawable/login_bg"
         android:padding="10dp" >
         
-        <Button
-            android:id="@+id/signUpButton"
-            android:layout_width="match_parent"
+        <EditText
+            android:id="@+id/userId"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:layout_margin="4dp"
-            android:text="@string/sign_up" />
+     		android:hint="@string/username"
+            android:inputType="text" 
+            android:singleLine="true"/>
         
+         <EditText
+            android:id="@+id/password"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+     		android:hint="@string/password"
+            android:inputType="textPassword" 
+            android:singleLine="true"/>
+
         <Button
             android:id="@+id/logInButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="15dp"
             android:padding="10dp"
-            android:layout_margin="4dp"
             android:text="@string/log_in" />
-        
     </LinearLayout>
-	
+
+    <Button
+        android:id="@+id/signUpButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="4dp"
+        android:layout_marginBottom="15dp"
+        android:padding="10dp"
+        android:text="@string/sign_up" 
+        android:background="#DDDDDD" 
+        android:onClick="onSignUpButtonClick"/>
+
 </RelativeLayout>
