--- a/res/layout/activity_change_password.xml
+++ b/res/layout/activity_change_password.xml
@@ -2,18 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#00B8E6"
+    android:background="#00B8E6" 
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="edu.upenn.med.researchaide.MainActivity" >
-    
-    <TextView
-        android:id="@+id/welcome"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+    tools:context="edu.upenn.med.researchaide.ChangePasswordActivity" >
 
     <LinearLayout
         android:id="@+id/linearLayout1"
@@ -25,29 +19,37 @@
         android:padding="10dp" >
         
         <EditText
-            android:id="@+id/userId"
+            android:id="@+id/oldPassword"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-     		android:hint="@string/username"
-            android:inputType="text" 
+     		android:hint="@string/old_password"
+            android:inputType="textPassword" 
             android:singleLine="true"/>
         
          <EditText
-            android:id="@+id/password"
+            android:id="@+id/newPassword1"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-     		android:hint="@string/password"
+     		android:hint="@string/new_password1"
+            android:inputType="textPassword" 
+            android:singleLine="true"/>
+         
+         <EditText
+            android:id="@+id/newPassword2"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+     		android:hint="@string/new_password2"
             android:inputType="textPassword" 
             android:singleLine="true"/>
 
         <Button
-            android:id="@+id/logInButton"
+            android:id="@+id/changePasswordButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
             android:padding="10dp"
-            android:text="@string/log_in" 
-            android:onClick="onLogInButtonClick"/>
+            android:text="@string/change_password" 
+            android:onClick="onConfirmChangeButtonClick"/>
         
     </LinearLayout>
 
