--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_gravity="top" 
         android:orientation="vertical"
         android:background="@drawable/login_bg"
         android:padding="10dp" >
