--- a/res/layout/activity_direction.xml
+++ b/res/layout/activity_direction.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,30 +5,30 @@
     android:orientation="vertical" >
 
     <Button
-        android:id="@+id/showInfoButton"
+        android:id="@+id/firstLocationButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
-        android:onClick="onShowInfoButtonClick"
+        android:onClick="onLocation1ButtonClick"
         android:padding="10dp"
-        android:text="@string/showInfo" />
+        android:text="@string/location1" />
 
     <Button
-        android:id="@+id/changePasswordButton"
+        android:id="@+id/secondLocationButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
-        android:onClick="onChangePasswordButtonClick"
+        android:onClick="onLocation2ButtonClick"
         android:padding="10dp"
-        android:text="@string/changePassword" />
+        android:text="@string/location2" />
 
     <Button
-        android:id="@+id/DirectionButton"
+        android:id="@+id/thirdLocationButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
-        android:onClick="onDirectionButtonClick"
+        android:onClick="onLocation3ButtonClick"
         android:padding="10dp"
-        android:text="@string/title_activity_direction" />
+        android:text="@string/location3" />
 
 </LinearLayout>
