--- a/res/layout/activity_userinfo.xml
+++ b/res/layout/activity_userinfo.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical" >
     
     <TextView 
-        android:id="@+id/userInfo"
+        android:id="@+id/userSchedule"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
