--- a/res/layout/activity_direction.xml
+++ b/res/layout/activity_direction.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#00B8E6"
+    android:background="#0092AD"
     android:orientation="vertical" >
 
     <Button
@@ -30,5 +30,13 @@
         android:onClick="onLocation3ButtonClick"
         android:padding="10dp"
         android:text="@string/location3" />
+    
+    <ImageView 
+   			android:id="@+id/slogo"
+   			android:src="@drawable/slogo"
+   			android:layout_width="wrap_content"
+   			android:layout_height="wrap_content"
+   			android:contentDescription="@string/logo"
+   			android:layout_gravity="center" />
 
 </LinearLayout>
