--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#00B8E6"
+    android:background="#0092AD"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -50,5 +50,12 @@
             android:onClick="onLogInButtonClick"/>
         
     </LinearLayout>
+    
+    <ImageView 
+   			android:id="@+id/logo"
+   			android:src="@drawable/logo"
+   			android:layout_width="wrap_content"
+   			android:layout_height="wrap_content"
+   			android:layout_alignParentBottom="true"/>
 
 </RelativeLayout>
