added tellfriend activity, added tellfirend xml, changed indexactivity

--- a/res/layout/activity_change_password.xml
+++ b/res/layout/activity_change_password.xml
@@ -44,7 +44,7 @@
 
         <Button
             android:id="@+id/changePasswordButton"
-            android:layout_width="match_parent"
+            android:layout_width="130dp"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
             android:padding="10dp"
